<resources>
    <string name="app_name">PfotenFreunde</string>
    <string name="empty"></string>
    <string name="promptUsername">Benutzername</string>
    <string name="promptPassword">Passwort</string>
    <string name="loginButton">Anmelden</string>
    <string name="registerButton">Registrieren</string>
    <string name="signUpTitle">Registrierung</string>
    <string name="promptEmail">Email</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Oeffnen</string>
    <string name="close">Schliessen</string>
    <string name="pet_search">Haustiere</string>+
    <string name="friend_search">Freunde..</string>

    <string name="nav_search">Suche</string>
    <string name="nac_friend">Freunde</string>
    <string name="nav_message">Nachrichten</string>
    <string name="nav_petprofile">Haustierprofile</string>

    <string name="random_text_1">
        Hadoop is a data processing tool used to process large size data over distributed
        commodity hardware. The trend of Big Data Hadoop market is on the boom and it’s
          not showing any kind of deceleration in its growth. Today, industries are capable
          of storing all the data generated at their business at an affordable price just
          because of Hadoop. Hadoop helps the industry to know their customer’s behavior,
          customers buying priorities i.e. what they loved the most, and click patterns,
          etc. Hadoop provides personalized recommendations and personalizes ad targeting
          features. Companies are generating thousands of petabytes of data every day so the
          demand for Big Data professionals is very high. Even after a few years,
          Hadoop will be considered as the must-learn skill for the data-scientist
          and Big Data Technology. Companies are investing big in it and it will become
          an in-demand skill in the future. Hadoop provides personalized recommendations
        and personalizes ad targeting
          features. Companies are generating thousands of petabytes of data every day so the
          demand for Big Data professionals is very high. Even after a few years,
          Hadoop will be considered as the must-learn skill for the data-scientist
          and Big Data Technology. Companies are investing big in it and it will become
          an in-demand skill in the future.
    </string>
    <string name="random_text_2">
    Humans are coming closer to the internet at a very fast rate. It means that the
    volume of data Industries is gathering will increase as time passes because of
    more users. Industry’s are gradually analyzing the need for this useful information
    they are getting from their users. It is for sure that the data always tends to
    an increasing pattern so the company’s are eventually acquiring professionals
    skilled with Big Data Technologies. According to NASSCOM, India’s Big Data
    Market will reach 16 billion USD by 2025 from 2 billion USD. The growth of smart
    devices in India is growing at a very huge rate that will cause growth in the
    Big Data Market. Since Big Data is growing the demand for Big Data professionals
    will be high.  Hadoop provides personalized recommendations and personalizes ad targeting
    features. Companies are generating thousands of petabytes of data every day so the
    demand for Big Data professionals is very high. Even after a few years,
    Hadoop will be considered as the must-learn skill for the data-scientist
    and Big Data Technology. Companies are investing big in it and it will become
        an i</string>
    <string name="adresse">Adresse</string>
    <string name="zip">PLZ</string>
    <string name="country">Country</string>
    <string name="street">Strasse</string>
    <string name="homepage">Homepage</string>
    <string name="email">Email</string>
    <string name="members">Mitglieder</string>
    <string name="searchPrompt">Suche..</string>
    <string name="nav_home">Home</string>
</resources>