<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/nac_friend" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/nav_message" />
        <item
            android:id="@+id/nav_petprofil"
            android:icon="@drawable/ic_baseline_pets_24"
            android:title="@string/nav_petprofile" />

    </group>

</menu>