<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profil_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="@dimen/default_margin_half"
                android:layout_marginTop="@dimen/default_margin_half"
                android:src="@drawable/ic_baseline_engineering_24"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/instituinName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="PLACEHOLDER NAME"/>


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_half"
            android:text="@string/adresse"
            android:textAppearance="@style/BlackDefault" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_marginLeft="@dimen/default_margin_half"
            android:layout_marginRight="@dimen/default_margin_half"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_half"
                    android:text="@string/street" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="@dimen/default_margin_half"
                    android:id="@+id/userStreet"
                    android:text="PLACEHOLDER"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_half"
                    android:text="@string/zip" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="@dimen/default_margin_half"
                    android:id="@+id/userZip"
                    android:text="PLACEHOLDER"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_half"
                    android:text="@string/country" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="@dimen/default_margin_half"
                    android:id="@+id/userCountry"
                    android:text="PLACEHOLDER"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_half"
            android:layout_marginTop="5dp"
            android:text="@string/homepage"
            android:textAppearance="@style/BlackDefault" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_marginLeft="@dimen/default_margin_half"
            android:layout_marginRight="@dimen/default_margin_half"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_half"
                android:text="@string/email" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="@dimen/default_margin_half"
                android:id="@+id/instituinEmail"
                android:text="PLACEHOLDER"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_half"
            android:layout_marginTop="5dp"
            android:text="@string/members"
            android:textAppearance="@style/BlackDefault" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_marginLeft="@dimen/default_margin_half"
            android:layout_marginRight="@dimen/default_margin_half"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_half"
            android:layout_marginRight="@dimen/default_margin_half"
            android:id="@+id/instituinMembers"/>
        <include layout="@layout/draw_edit_button" />
    </LinearLayout>
</RelativeLayout>